# Documentar y agregar comentarios al codigo

# Importar las bibliotecas necesarias para enviar el client stub
# Completar
import ... as pb

# Completar las elipsis (...)
solicitud_1 = pb.solicitud_ride(
    taxi_id=...
    conductor_id='Sist_dist',
    pasajero_id=[...],  # ['Codigo_UPB', 'Codigo_UPB+10', 'Codigo_UPB+20']
    costo_estimado =  ...
)

# Imprimir el mensaje de solicitud:
print("Formato de solicitud:\n",solicitud_1)